<resources>
    <string name="app_name">CactiPhone</string>
    <string name="name">Cacti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="code">Naam</string>
    <string name="description">Omschrijving</string>
    <string name="location">Lokatie</string>
    <string name="father">Naam Vader</string>
    <string name="mother">Naam Moeder</string>
    <string name="crossing">Kruisings Nr</string>
    <string name="photo">Foto</string>
    <string name="qrcode">QR</string>


    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="new_">New</string>
    <string name="settings">Settings</string>
    <string name="grid3">Grid 3</string>
    <string name="grid2">Grid 2</string>
    <string name="list">Details</string>


    <string name="changed">Changed</string>
    <string name="cactus_changed">Cactus changed, save first?</string>

</resources>