<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/baseline_check_24"
        android:orderInCategory="30"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/baseline_delete_outline_24"
        android:orderInCategory="20"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_photo"
        android:icon="@drawable/baseline_add_a_photo_24"
        android:orderInCategory="10"
        android:title="@string/photo"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_show_qr"
        android:icon="@drawable/baseline_qr_code_scanner_24"
        android:orderInCategory="1"
        android:title="@string/qrcode"
        app:showAsAction="ifRoom"/>

</menu>