<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_item_grid_2"
        android:icon="@drawable/view_grid_outline"
        android:orderInCategory="9"
        android:title="@string/grid2"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_grid_3"
        android:icon="@drawable/grid"
        android:orderInCategory="8"
        android:title="@string/grid3"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_list"
        android:icon="@drawable/format_list_checkbox"
        android:orderInCategory="7"
        android:title="@string/list"
        app:showAsAction="never" />

</menu>